# web-ssh-rs

./: Cargo.toml  Dockerfile  README.cn.md  README.md
.github/workflows/: binary-release.yml  docker-release.yml  release.yml
src/: cli.rs  main.rs  protocol.rs  routes.rs  ssh.rs  state.rs  target.rs  ws.rs
static/: index.html
